--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-sass": "~0.8.1",
+    "grunt-contrib-sass": "^0.9.2",
     "grunt-cli": "~0.1.13",
     "grunt-mkdir": "~0.1.1",
     "grunt-lintspaces": "~0.7.0",
